implemented the class and parsed some info from the soup

--- a/trial_1.ipynb
+++ b/trial_1.ipynb
@@ -108,16 +108,27 @@
     "    for link in set(links_to_postings):\n",
     "        soups.append(get_soup(link))\n",
     "        #get soups for unique job links parsed from different websites\n",
+    "    print(f'we got {len(soups)} job postings')\n",
     "    return soups"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_titles(soup):"
+    "class job_posting(object):\n",
+    "    def __init__(self):\n",
+    "        self.job_title = None\n",
+    "        self.company = None\n",
+    "        self.original_link = None\n",
+    "        self.is_full_time = None\n",
+    "        self.company_location = None\n",
+    "        self.job_location = None\n",
+    "        self.requirements = None\n",
+    "        self.languages_used = None\n",
+    "       "
    ]
   },
   {
@@ -178,10 +189,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "https://www.indeed.com/jobs?q=%22Software+Engineer%22&start=40\n",
       "https://www.indeed.com/jobs?q=%22Software+Engineer%22&start=10\n",
-      "https://www.indeed.com/jobs?q=%22Software+Engineer%22&start=20\n",
       "https://www.indeed.com/jobs?q=%22Software+Engineer%22&start=30\n",
-      "https://www.indeed.com/jobs?q=%22Software+Engineer%22&start=40\n"
+      "https://www.indeed.com/jobs?q=%22Software+Engineer%22&start=20\n"
      ]
     }
    ],
@@ -191,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -208,15 +219,44 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://www.indeed.com/viewjob?jk=1c1cca2129ef17d6&fccid=9784ae78e9834539&vjs=3\n",
+      "https://www.indeed.com/viewjob?jk=b1bc74ae6a65affd&fccid=fa0ca3b638673d62&vjs=3\n",
+      "https://www.indeed.com/viewjob?jk=e13296989729369f&fccid=ffe2a8d347177024&vjs=3\n",
+      "https://www.indeed.com/viewjob?jk=98e883979bea8ef0&fccid=3e3eaa6aedf690a3&vjs=3\n",
       "https://www.indeed.com/viewjob?jk=6797ab67821bf99e&fccid=f490aa2d3c80bc75&vjs=3\n",
-      "https://www.indeed.com/viewjob?jk=0ccc9495c5e70728&fccid=4edf263374ff05e2&vjs=3\n",
-      "https://www.indeed.com/viewjob?jk=55a3be0a59892c9c&fccid=1b50fcfb150b1b48&vjs=3\n",
-      "https://www.indeed.com/viewjob?jk=25a0c3b6b7ddbb3f&fccid=dd09fe3b43125016&vjs=3\n",
-      "https://www.indeed.com/viewjob?jk=ca6f5836440946a9&fccid=1b50fcfb150b1b48&vjs=3\n",
+      "https://www.indeed.com/viewjob?jk=00fa5f48006d155e&fccid=16a97ed26c75bf2d&vjs=3\n",
+      "https://www.indeed.com/viewjob?jk=4bdd5ddf91979cbe&fccid=a331385a899e3dc9&vjs=3\n",
+      "https://www.indeed.com/viewjob?jk=05b631d7903d80c7&fccid=30cc7a5451d4ee77&vjs=3\n",
+      "https://www.indeed.com/viewjob?jk=3c1814fe69710537&fccid=f89deb5a97c7738a&vjs=3\n",
       "https://www.indeed.com/viewjob?jk=2ab912f23dd2ffbb&fccid=66403b30a2c0d89c&vjs=3\n",
+      "https://www.indeed.com/viewjob?jk=9882a391effc77b7&fccid=16a97ed26c75bf2d&vjs=3\n",
+      "https://www.indeed.com/viewjob?jk=10ea647495b66b08&fccid=f766f8bfbc3effb7&vjs=3\n",
+      "https://www.indeed.com/viewjob?jk=860fe970f93bd3f8&fccid=aef928e89977f7f0&vjs=3\n",
+      "https://www.indeed.com/viewjob?jk=6293e5f4537b2ec2&fccid=4055a3edc92e3c66&vjs=3\n",
+      "https://www.indeed.com/viewjob?jk=7a2ac81617de5660&fccid=d58be9e5bb7e408d&vjs=3\n",
+      "https://www.indeed.com/viewjob?jk=55a3be0a59892c9c&fccid=1b50fcfb150b1b48&vjs=3\n",
+      "https://www.indeed.com/viewjob?jk=97ac7dc76da3b0c1&fccid=1b50fcfb150b1b48&vjs=3\n",
+      "https://www.indeed.com/viewjob?jk=e2ac69e3df8da482&fccid=5b47cb6dc9bd7f35&vjs=3\n",
+      "https://www.indeed.com/viewjob?jk=ae3139c2282ce2b2&fccid=aef928e89977f7f0&vjs=3\n",
       "https://www.indeed.com/viewjob?jk=c301ab0af8d9b051&fccid=68ec8a8ee6cf5ac6&vjs=3\n",
-      "https://www.indeed.com/viewjob?jk=fcb7593ec9da4fcf&fccid=8b9bafd9d608c198&vjs=3\n"
+      "https://www.indeed.com/viewjob?jk=1b5740e8cd95827c&fccid=fe2d21eef233e94a&vjs=3\n",
+      "https://www.indeed.com/viewjob?jk=c1e5bd7a50cac627&fccid=5309ddd82b852332&vjs=3\n",
+      "https://www.indeed.com/viewjob?jk=c0ea906550aa06e7&fccid=617d7f961cfcf54a&vjs=3\n",
+      "https://www.indeed.com/viewjob?jk=a538f7ea85206147&fccid=16a97ed26c75bf2d&vjs=3\n",
+      "https://www.indeed.com/viewjob?jk=d1ac7c3abb25c257&fccid=734cb5a01ee60f80&vjs=3\n",
+      "https://www.indeed.com/viewjob?jk=ca6f5836440946a9&fccid=1b50fcfb150b1b48&vjs=3\n",
+      "https://www.indeed.com/viewjob?jk=05e09989ba00273e&fccid=645d83ee4cbe1d25&vjs=3\n",
+      "https://www.indeed.com/viewjob?jk=c6e3b26327475860&fccid=92b6ad9b1bd886b6&vjs=3\n",
+      "https://www.indeed.com/viewjob?jk=5064b0d04f092d24&fccid=c060d0df634ace82&vjs=3\n",
+      "https://www.indeed.com/viewjob?jk=bf0ae9c135f9c38a&fccid=a2faf1301ac6ad4b&vjs=3\n",
+      "https://www.indeed.com/viewjob?jk=a4a0e9ccf8a052a8&fccid=66cdbe15c1ac4d49&vjs=3\n",
+      "https://www.indeed.com/viewjob?jk=6bf3bcdbba573e4c&fccid=2ac0dbed95f0e3bf&vjs=3\n",
+      "https://www.indeed.com/viewjob?jk=75424cabf7072b97&fccid=6824fc1f087bd63e&vjs=3\n",
+      "https://www.indeed.com/viewjob?jk=9f068e657d36e17b&fccid=ae5bfc395c530fbc&vjs=3\n",
+      "https://www.indeed.com/viewjob?jk=c7275fc5f29826cb&fccid=143e87dbc66db20c&vjs=3\n",
+      "https://www.indeed.com/viewjob?jk=a359dd1de8ba0947&fccid=cd6c9f98394f9865&vjs=3\n",
+      "https://www.indeed.com/viewjob?jk=25a0c3b6b7ddbb3f&fccid=dd09fe3b43125016&vjs=3\n",
+      "https://www.indeed.com/viewjob?jk=fc1dcc87af558fca&fccid=200a825acadb9338&vjs=3\n",
+      "we got 37 job postings\n"
      ]
     }
    ],
@@ -226,92 +266,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
-    "sd = page.find('div',{'class':'jobsearch-SerpJobCard unifiedRow row result clickcard'})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for s in sd:\n",
-    "    d = s.find('a', href = True)\n",
-    "    print(d['href'])"
+    "def parse_company_name(soup):\n",
+    "    name = 'unknown'\n",
+    "    text = soup.find('div',{'class':'jobsearch-InlineCompanyRating icl-u-xs-mt--xs jobsearch-DesktopStickyContainer-companyrating'})\n",
+    "    if text:\n",
+    "        name = re.sub('[0-9]','',text.text)\n",
+    "    final = name.replace('reviews','').replace(',','').title()\n",
+    "    return final"
    ]
   },
   {
@@ -326,68 +291,125 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "container = page.find('div',{'class':'mosaic mosaic-provider-jobcards mosaic-provider-hydrated'})"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "boxes = container.find_all('a', href =True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "boxes[0]['href'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "links_to_postings = []\n",
-    "for box in boxes:\n",
-    "    first = box['href']\n",
-    "    if '/rc/clk?jk' in first:\n",
-    "        link = first.replace('/rc/clk?','https://www.indeed.com/viewjob?')\n",
-    "        links_to_postings.append(link)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "soups = []\n",
-    "for link in links_to_postings:\n",
-    "    soup = get_soup(link)\n",
-    "    soups.append(soup)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dun & Bradstreet \n",
+      "Mgm Resorts International \n",
+      "Hbo \n",
+      "Paycor \n",
+      "Goldman Sachs \n",
+      "Workboard\n",
+      "Warner Bros. Entertainment Group \n",
+      "Adobe \n",
+      "Netflix \n",
+      "Goldman Sachs \n",
+      "Uber \n",
+      "Splunk \n",
+      "Internet Brands \n",
+      "Ace Hardware \n",
+      "The New York Times \n",
+      "The New York Times \n",
+      "Cbs Interactive \n",
+      "Splunk \n",
+      "Xylem \n",
+      "Amazon.Com Services Llc \n",
+      "Affinity Solutions \n",
+      "Electronic Arts \n",
+      "Goldman Sachs \n",
+      "Microsoft \n",
+      "The New York Times \n",
+      "Blizzard Entertainment \n",
+      "Turner \n",
+      "Versant Health \n",
+      "Bosch Group \n",
+      "Real Time Medical Systems\n",
+      "Vizio Inc.\n",
+      "Hulu \n",
+      "U.S. Bank \n",
+      "Edquity\n",
+      "Franklincovey \n",
+      "Dell Technologies \n",
+      "Bae Systems \n"
+     ]
+    }
+   ],
    "source": [
     "for soup in soups:\n",
-    "    title = soup.find('h1',{'class':'icl-u-xs-mb--xs icl-u-xs-mt--none jobsearch-JobInfoHeader-title'}).text\n",
+    "    job = job_posting()\n",
+    "    job.job_title = soup.find('h1',{'class':'icl-u-xs-mb--xs icl-u-xs-mt--none jobsearch-JobInfoHeader-title'}).text.title()\n",
+    "    job.original_link = soup.find('div',{'id':'originalJobLinkContainer'}).find('a')['href']\n",
+    "    job.company = parse_company_name(soup)\n",
     "    \n",
-    "    original = soup.find('div',{'id':'originalJobLinkContainer'}).find('a')['href']\n",
-    "    print(original)"
+    "    \n",
+    "    \n",
+    "    \n",
+    "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
