parse job location and is_remote function

--- a/trial_1.ipynb
+++ b/trial_1.ipynb
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,26 +124,12 @@
     "        self.company = None\n",
     "        self.original_link = None\n",
     "        self.is_full_time = None\n",
-    "        self.company_location = None\n",
+    "        self.is_remote = None\n",
     "        self.job_location = None\n",
     "        self.requirements = None\n",
     "        self.languages_used = None\n",
     "       "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -266,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +262,34 @@
     "    if text:\n",
     "        name = re.sub('[0-9]','',text.text)\n",
     "    final = name.replace('reviews','').replace(',','').title()\n",
-    "    return final"
+    "    return final\n",
+    "\n",
+    "\n",
+    "def parse_working_time(soup):\n",
+    "    soup_text = soup.text.lower()\n",
+    "    if 'full time' in soup_text or 'full-time' in soup_text:\n",
+    "        full_time = True\n",
+    "    elif 'part time' in soup_text or 'part-time' in soup_text:\n",
+    "        full_time = False\n",
+    "    else:\n",
+    "        full_time = 'N/A'\n",
+    "    return full_time\n",
+    "    \n",
+    "    \n",
+    "def parse_job_location(soup):\n",
+    "    is_remote = 'N/A'\n",
+    "    entire_text = soup.find('div',{'class':'icl-u-xs-mt--xs icl-u-textColor--secondary jobsearch-JobInfoHeader-subtitle jobsearch-DesktopStickyContainer-subtitle'}).text\n",
+    "    company_name = soup.find('div',{'class':'jobsearch-InlineCompanyRating icl-u-xs-mt--xs jobsearch-DesktopStickyContainer-companyrating'}).text\n",
+    "    final = entire_text.replace(company_name, '')\n",
+    "    if 'remote' in final.lower():\n",
+    "        final = final.lower().split('remote')[0].title()\n",
+    "        is_remote = True\n",
+    "    if final == '':\n",
+    "        final = 'Remote'\n",
+    "    return final , is_remote\n",
+    "    \n",
+    "    \n",
+    "    "
    ]
   },
   {
@@ -295,50 +308,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dun & Bradstreet \n",
-      "Mgm Resorts International \n",
-      "Hbo \n",
-      "Paycor \n",
-      "Goldman Sachs \n",
-      "Workboard\n",
-      "Warner Bros. Entertainment Group \n",
-      "Adobe \n",
-      "Netflix \n",
-      "Goldman Sachs \n",
-      "Uber \n",
-      "Splunk \n",
-      "Internet Brands \n",
-      "Ace Hardware \n",
-      "The New York Times \n",
-      "The New York Times \n",
-      "Cbs Interactive \n",
-      "Splunk \n",
-      "Xylem \n",
-      "Amazon.Com Services Llc \n",
-      "Affinity Solutions \n",
-      "Electronic Arts \n",
-      "Goldman Sachs \n",
-      "Microsoft \n",
-      "The New York Times \n",
-      "Blizzard Entertainment \n",
-      "Turner \n",
-      "Versant Health \n",
-      "Bosch Group \n",
-      "Real Time Medical Systems\n",
-      "Vizio Inc.\n",
-      "Hulu \n",
-      "U.S. Bank \n",
-      "Edquity\n",
-      "Franklincovey \n",
-      "Dell Technologies \n",
-      "Bae Systems \n"
+      "Short Hills, NJ 07078 || N/A\n",
+      "Nevada || True\n",
+      "New York, NY || N/A\n",
+      "Remote || True\n",
+      "New York, NY 10282 || N/A\n",
+      "New York, NY || N/A\n",
+      "Burbank, CA 91522 || N/A\n",
+      "San Francisco, CA || N/A\n",
+      "Los Gatos, Ca || True\n",
+      "New York, NY 10282 || N/A\n",
+      "New York, NY || N/A\n",
+      "San Francisco, CA 94107 || N/A\n",
+      "New York, NY 10014 || N/A\n",
+      "Somerville, MA || N/A\n",
+      "New York, Ny || True\n",
+      "New York, NY || N/A\n",
+      "New York, NY 10019 || N/A\n",
+      "New York, Ny 10001 || True\n",
+      "Rye Brook, Ny 10573 || True\n",
+      "Seattle, WA || N/A\n",
+      "New York, NY 10120 || N/A\n",
+      "Baton Rouge, LA 70820 || N/A\n",
+      "New York, NY 10282 || N/A\n",
+      "Redmond, WA 98052 || N/A\n",
+      "New York, NY || N/A\n",
+      "Irvine, CA 92618 || N/A\n",
+      "New York, NY || N/A\n",
+      "New York, Ny || True\n",
+      "Fairport, NY 14450 || N/A\n",
+      "Remote || True\n",
+      "Denver, CO 80206 || N/A\n",
+      "San Francisco, CA 94133 || N/A\n",
+      "New York, NY || N/A\n",
+      "New York, Ny || True\n",
+      "New York, NY || N/A\n",
+      "Hopkinton, MA || N/A\n",
+      "Hudson, NH 03051 || N/A\n"
      ]
     }
    ],
@@ -348,10 +361,13 @@
     "    job.job_title = soup.find('h1',{'class':'icl-u-xs-mb--xs icl-u-xs-mt--none jobsearch-JobInfoHeader-title'}).text.title()\n",
     "    job.original_link = soup.find('div',{'id':'originalJobLinkContainer'}).find('a')['href']\n",
     "    job.company = parse_company_name(soup)\n",
+    "    job.is_full_time = parse_working_time(soup)\n",
+    "    job.job_location, job.is_remote = parse_job_location(soup)\n",
     "    \n",
+    "    job.requirements = None\n",
+    "    job.languages_used = None\n",
     "    \n",
-    "    \n",
-    "    \n",
+    "    print(job.job_location,'||', job.is_remote)\n",
     "    "
    ]
   },
