--- a/trial_1.ipynb
+++ b/trial_1.ipynb
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -176,8 +176,8 @@
      "output_type": "stream",
      "text": [
       "https://www.indeed.com/jobs?q=%22Software+Engineer%22&start=40\n",
-      "https://www.indeed.com/jobs?q=%22Software+Engineer%22&start=10\n",
       "https://www.indeed.com/jobs?q=%22Software+Engineer%22&start=30\n",
+      "https://www.indeed.com/jobs?q=%22Software+Engineer%22&start=10\n",
       "https://www.indeed.com/jobs?q=%22Software+Engineer%22&start=20\n"
      ]
     }
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -205,44 +205,48 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://www.indeed.com/viewjob?jk=b1bc74ae6a65affd&fccid=fa0ca3b638673d62&vjs=3\n",
-      "https://www.indeed.com/viewjob?jk=e13296989729369f&fccid=ffe2a8d347177024&vjs=3\n",
-      "https://www.indeed.com/viewjob?jk=98e883979bea8ef0&fccid=3e3eaa6aedf690a3&vjs=3\n",
-      "https://www.indeed.com/viewjob?jk=6797ab67821bf99e&fccid=f490aa2d3c80bc75&vjs=3\n",
-      "https://www.indeed.com/viewjob?jk=00fa5f48006d155e&fccid=16a97ed26c75bf2d&vjs=3\n",
-      "https://www.indeed.com/viewjob?jk=4bdd5ddf91979cbe&fccid=a331385a899e3dc9&vjs=3\n",
-      "https://www.indeed.com/viewjob?jk=05b631d7903d80c7&fccid=30cc7a5451d4ee77&vjs=3\n",
-      "https://www.indeed.com/viewjob?jk=3c1814fe69710537&fccid=f89deb5a97c7738a&vjs=3\n",
-      "https://www.indeed.com/viewjob?jk=2ab912f23dd2ffbb&fccid=66403b30a2c0d89c&vjs=3\n",
-      "https://www.indeed.com/viewjob?jk=9882a391effc77b7&fccid=16a97ed26c75bf2d&vjs=3\n",
-      "https://www.indeed.com/viewjob?jk=10ea647495b66b08&fccid=f766f8bfbc3effb7&vjs=3\n",
-      "https://www.indeed.com/viewjob?jk=860fe970f93bd3f8&fccid=aef928e89977f7f0&vjs=3\n",
-      "https://www.indeed.com/viewjob?jk=6293e5f4537b2ec2&fccid=4055a3edc92e3c66&vjs=3\n",
-      "https://www.indeed.com/viewjob?jk=7a2ac81617de5660&fccid=d58be9e5bb7e408d&vjs=3\n",
-      "https://www.indeed.com/viewjob?jk=55a3be0a59892c9c&fccid=1b50fcfb150b1b48&vjs=3\n",
-      "https://www.indeed.com/viewjob?jk=97ac7dc76da3b0c1&fccid=1b50fcfb150b1b48&vjs=3\n",
-      "https://www.indeed.com/viewjob?jk=e2ac69e3df8da482&fccid=5b47cb6dc9bd7f35&vjs=3\n",
-      "https://www.indeed.com/viewjob?jk=ae3139c2282ce2b2&fccid=aef928e89977f7f0&vjs=3\n",
-      "https://www.indeed.com/viewjob?jk=c301ab0af8d9b051&fccid=68ec8a8ee6cf5ac6&vjs=3\n",
-      "https://www.indeed.com/viewjob?jk=1b5740e8cd95827c&fccid=fe2d21eef233e94a&vjs=3\n",
       "https://www.indeed.com/viewjob?jk=c1e5bd7a50cac627&fccid=5309ddd82b852332&vjs=3\n",
-      "https://www.indeed.com/viewjob?jk=c0ea906550aa06e7&fccid=617d7f961cfcf54a&vjs=3\n",
-      "https://www.indeed.com/viewjob?jk=a538f7ea85206147&fccid=16a97ed26c75bf2d&vjs=3\n",
-      "https://www.indeed.com/viewjob?jk=d1ac7c3abb25c257&fccid=734cb5a01ee60f80&vjs=3\n",
-      "https://www.indeed.com/viewjob?jk=ca6f5836440946a9&fccid=1b50fcfb150b1b48&vjs=3\n",
-      "https://www.indeed.com/viewjob?jk=05e09989ba00273e&fccid=645d83ee4cbe1d25&vjs=3\n",
-      "https://www.indeed.com/viewjob?jk=c6e3b26327475860&fccid=92b6ad9b1bd886b6&vjs=3\n",
-      "https://www.indeed.com/viewjob?jk=5064b0d04f092d24&fccid=c060d0df634ace82&vjs=3\n",
-      "https://www.indeed.com/viewjob?jk=bf0ae9c135f9c38a&fccid=a2faf1301ac6ad4b&vjs=3\n",
+      "https://www.indeed.com/viewjob?jk=4e46d4925e6c6328&fccid=3e3eaa6aedf690a3&vjs=3\n",
+      "https://www.indeed.com/viewjob?jk=16e97e1fd4ed4a4b&fccid=e32d933c26e873c8&vjs=3\n",
+      "https://www.indeed.com/viewjob?jk=835c0973db3a626b&fccid=6bcbaf35af26e1a6&vjs=3\n",
+      "https://www.indeed.com/viewjob?jk=76ddcf435e07a36e&fccid=c594c442f5397e7b&vjs=3\n",
+      "https://www.indeed.com/viewjob?jk=6797ab67821bf99e&fccid=f490aa2d3c80bc75&vjs=3\n",
+      "https://www.indeed.com/viewjob?jk=7bcc0e8542a54815&fccid=bee6abba453010ff&vjs=3\n",
+      "https://www.indeed.com/viewjob?jk=c86732b141b38515&fccid=c007936ceb766fe5&vjs=3\n",
+      "https://www.indeed.com/viewjob?jk=a359dd1de8ba0947&fccid=cd6c9f98394f9865&vjs=3\n",
+      "https://www.indeed.com/viewjob?jk=3db8678198e5f5d4&fccid=25b5166547bbf543&vjs=3\n",
+      "https://www.indeed.com/viewjob?jk=c301ab0af8d9b051&fccid=68ec8a8ee6cf5ac6&vjs=3\n",
+      "https://www.indeed.com/viewjob?jk=1c1cca2129ef17d6&fccid=9784ae78e9834539&vjs=3\n",
+      "https://www.indeed.com/viewjob?jk=6c9db143ba6833a4&fccid=aaf3b433897ea465&vjs=3\n",
+      "https://www.indeed.com/viewjob?jk=b246045b00ff72ce&fccid=5bd99dfa21c8a490&vjs=3\n",
       "https://www.indeed.com/viewjob?jk=a4a0e9ccf8a052a8&fccid=66cdbe15c1ac4d49&vjs=3\n",
-      "https://www.indeed.com/viewjob?jk=6bf3bcdbba573e4c&fccid=2ac0dbed95f0e3bf&vjs=3\n",
+      "https://www.indeed.com/viewjob?jk=d18cde112dad3c0c&fccid=5b2f9eaa91cb3370&vjs=3\n",
+      "https://www.indeed.com/viewjob?jk=43e2170add35506d&fccid=734cb5a01ee60f80&vjs=3\n",
+      "https://www.indeed.com/viewjob?jk=8f701ce3c67926a8&fccid=dd616958bd9ddc12&vjs=3\n",
+      "https://www.indeed.com/viewjob?jk=97ac7dc76da3b0c1&fccid=1b50fcfb150b1b48&vjs=3\n",
+      "https://www.indeed.com/viewjob?jk=55a3be0a59892c9c&fccid=1b50fcfb150b1b48&vjs=3\n",
+      "https://www.indeed.com/viewjob?jk=e13296989729369f&fccid=ffe2a8d347177024&vjs=3\n",
+      "https://www.indeed.com/viewjob?jk=d1ac7c3abb25c257&fccid=734cb5a01ee60f80&vjs=3\n",
       "https://www.indeed.com/viewjob?jk=75424cabf7072b97&fccid=6824fc1f087bd63e&vjs=3\n",
       "https://www.indeed.com/viewjob?jk=9f068e657d36e17b&fccid=ae5bfc395c530fbc&vjs=3\n",
-      "https://www.indeed.com/viewjob?jk=c7275fc5f29826cb&fccid=143e87dbc66db20c&vjs=3\n",
-      "https://www.indeed.com/viewjob?jk=a359dd1de8ba0947&fccid=cd6c9f98394f9865&vjs=3\n",
+      "https://www.indeed.com/viewjob?jk=2ab912f23dd2ffbb&fccid=66403b30a2c0d89c&vjs=3\n",
+      "https://www.indeed.com/viewjob?jk=9882a391effc77b7&fccid=16a97ed26c75bf2d&vjs=3\n",
+      "https://www.indeed.com/viewjob?jk=65aa93086ae9f208&fccid=dd616958bd9ddc12&vjs=3\n",
+      "https://www.indeed.com/viewjob?jk=a538f7ea85206147&fccid=16a97ed26c75bf2d&vjs=3\n",
+      "https://www.indeed.com/viewjob?jk=29039512dbd7039e&fccid=f89deb5a97c7738a&vjs=3\n",
+      "https://www.indeed.com/viewjob?jk=ca6f5836440946a9&fccid=1b50fcfb150b1b48&vjs=3\n",
+      "https://www.indeed.com/viewjob?jk=c6e3b26327475860&fccid=92b6ad9b1bd886b6&vjs=3\n",
+      "https://www.indeed.com/viewjob?jk=10ea647495b66b08&fccid=f766f8bfbc3effb7&vjs=3\n",
+      "https://www.indeed.com/viewjob?jk=3c1814fe69710537&fccid=f89deb5a97c7738a&vjs=3\n",
+      "https://www.indeed.com/viewjob?jk=bf0ae9c135f9c38a&fccid=a2faf1301ac6ad4b&vjs=3\n",
+      "https://www.indeed.com/viewjob?jk=8c2a8afbbd8dacbc&fccid=c1099851e9794854&vjs=3\n",
+      "https://www.indeed.com/viewjob?jk=ae3139c2282ce2b2&fccid=aef928e89977f7f0&vjs=3\n",
+      "https://www.indeed.com/viewjob?jk=98e883979bea8ef0&fccid=3e3eaa6aedf690a3&vjs=3\n",
+      "https://www.indeed.com/viewjob?jk=cf559c5a2c2084c0&fccid=6932ed8e52d6f33f&vjs=3\n",
+      "https://www.indeed.com/viewjob?jk=6293e5f4537b2ec2&fccid=4055a3edc92e3c66&vjs=3\n",
       "https://www.indeed.com/viewjob?jk=25a0c3b6b7ddbb3f&fccid=dd09fe3b43125016&vjs=3\n",
-      "https://www.indeed.com/viewjob?jk=fc1dcc87af558fca&fccid=200a825acadb9338&vjs=3\n",
-      "we got 37 job postings\n"
+      "https://www.indeed.com/viewjob?jk=4bdd5ddf91979cbe&fccid=a331385a899e3dc9&vjs=3\n",
+      "we got 41 job postings\n"
      ]
     }
    ],
@@ -252,10 +256,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
+    "def parse_job_title(soup):\n",
+    "    title = 'N/A'\n",
+    "    title_text = soup.find('h1',{'class':'icl-u-xs-mb--xs icl-u-xs-mt--none jobsearch-JobInfoHeader-title'})\n",
+    "    if title_text:\n",
+    "        title = title_text.text.title()\n",
+    "    return title    \n",
+    "    \n",
+    "    \n",
+    "def parse_link(soup):\n",
+    "    link = 'N/A'\n",
+    "    link_text = soup.find('div',{'id':'originalJobLinkContainer'})\n",
+    "    if link_text:\n",
+    "        link = link_text.find('a')['href']\n",
+    "    return link\n",
+    "        \n",
+    "        \n",
     "def parse_company_name(soup):\n",
     "    name = 'unknown'\n",
     "    text = soup.find('div',{'class':'jobsearch-InlineCompanyRating icl-u-xs-mt--xs jobsearch-DesktopStickyContainer-companyrating'})\n",
@@ -278,9 +298,11 @@
     "    \n",
     "def parse_job_location(soup):\n",
     "    is_remote = 'N/A'\n",
-    "    entire_text = soup.find('div',{'class':'icl-u-xs-mt--xs icl-u-textColor--secondary jobsearch-JobInfoHeader-subtitle jobsearch-DesktopStickyContainer-subtitle'}).text\n",
-    "    company_name = soup.find('div',{'class':'jobsearch-InlineCompanyRating icl-u-xs-mt--xs jobsearch-DesktopStickyContainer-companyrating'}).text\n",
-    "    final = entire_text.replace(company_name, '')\n",
+    "    final = 'N/A'\n",
+    "    entire_text = soup.find('div',{'class':'icl-u-xs-mt--xs icl-u-textColor--secondary jobsearch-JobInfoHeader-subtitle jobsearch-DesktopStickyContainer-subtitle'})\n",
+    "    if entire_text:\n",
+    "        company_name = soup.find('div',{'class':'jobsearch-InlineCompanyRating icl-u-xs-mt--xs jobsearch-DesktopStickyContainer-companyrating'}).text\n",
+    "        final = entire_text.text.replace(company_name, '')\n",
     "    if 'remote' in final.lower():\n",
     "        final = final.lower().split('remote')[0].title()\n",
     "        is_remote = True\n",
@@ -308,21 +330,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "for soup in soups:\n",
     "    job = job_posting()\n",
-    "    job.job_title = soup.find('h1',{'class':'icl-u-xs-mb--xs icl-u-xs-mt--none jobsearch-JobInfoHeader-title'}).text.title()\n",
-    "    job.original_link = soup.find('div',{'id':'originalJobLinkContainer'}).find('a')['href']\n",
+    "    job.job_title = parse_job_title(soup)\n",
+    "    job.original_link = parse_link(soup)\n",
     "    job.company = parse_company_name(soup)\n",
     "    job.is_full_time = parse_working_time(soup)\n",
     "    job.job_location, job.is_remote = parse_job_location(soup)\n",
     "    \n",
     "    job.requirements = None\n",
     "    job.languages_used = None\n",
-    "    \n",
     "    "
    ]
   },
