added the csv export functionality

--- a/trial_1.ipynb
+++ b/trial_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,39 +10,26 @@
     "from bs4 import BeautifulSoup\n",
     "from selenium import webdriver\n",
     "from selenium.webdriver.chrome.options import Options as ChromeOptions\n",
-    "from selenium.webdriver.firefox.options import Options as FirefoxOptions\n",
-    "from selenium.webdriver.chrome.options import Options as ChromeOptions\n",
     "from datetime import datetime\n",
     "CHROME_DRIVER = './chromedriver'\n",
-    "FIREFOX_DRIVER = './geckodriver'\n",
     "import time\n",
-    "import re\n",
-    "import requests\n",
-    "import json\n",
-    "import random\n",
-    "import copy\n",
-    "import pprint\n",
+    "import pandas \n",
+    "import os\n",
     "\n",
     "\n",
     "def setup_driver(headless=True, driver_type=CHROME_DRIVER) -> webdriver:\n",
-    "    if 'chrome' in driver_type.lower():\n",
-    "        options = ChromeOptions()\n",
-    "        options.add_argument('--ignore-certificate-errors')\n",
-    "        options.add_argument('--ignore-ssl-errors')\n",
-    "        if headless:\n",
-    "            options.add_argument('-headless')\n",
-    "        driver = webdriver.Chrome(executable_path=driver_type, chrome_options=options)\n",
-    "    else:\n",
-    "        options = FirefoxOptions()\n",
-    "        if headless:\n",
-    "            options.add_argument('-headless')\n",
-    "        driver = webdriver.Firefox(executable_path=driver_type, firefox_options=options)\n",
+    "    options = ChromeOptions()\n",
+    "    options.add_argument('--ignore-certificate-errors')\n",
+    "    options.add_argument('--ignore-ssl-errors')\n",
+    "    if headless:\n",
+    "        options.add_argument('-headless')\n",
+    "    driver = webdriver.Chrome(executable_path=driver_type, chrome_options=options)\n",
     "    return driver\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +43,8 @@
     "    #in case a pop up appears, it closes it\n",
     "    if soup.find('div',{'id':'popover-form-container'}):\n",
     "        driver.execute_script(executing_query)\n",
-    "    soupd[driver.current_url] = soup\n",
+    "        soup = BeautifulSoup(driver.page_source, \"html.parser\")\n",
+    "    print(driver.current_url)\n",
     "    driver.quit()\n",
     "    return soup\n",
     "\n",
@@ -114,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,27 +114,61 @@
     "        self.is_full_time = None\n",
     "        self.is_remote = None\n",
     "        self.job_location = None\n",
-    "        self.requirements = None\n",
-    "        self.languages_used = None\n",
+    "        self.description = None\n",
     "       "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-1-736bf922cedc>:18: DeprecationWarning: use options instead of chrome_options\n",
+      "  driver = webdriver.Chrome(executable_path=driver_type, chrome_options=options)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://www.indeed.com/jobs?q=%22Software+Engineer%22\n"
+     ]
+    }
+   ],
    "source": [
     "page = get_soup('https://www.indeed.com/jobs?q=%22Software+Engineer%22&l=')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-1-736bf922cedc>:18: DeprecationWarning: use options instead of chrome_options\n",
+      "  driver = webdriver.Chrome(executable_path=driver_type, chrome_options=options)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://www.indeed.com/jobs?q=%22Software+Engineer%22&start=10\n",
+      "https://www.indeed.com/jobs?q=%22Software+Engineer%22&start=30\n",
+      "https://www.indeed.com/jobs?q=%22Software+Engineer%22&start=20\n",
+      "https://www.indeed.com/jobs?q=%22Software+Engineer%22&start=40\n"
+     ]
+    }
+   ],
    "source": [
     "pages = parse_all_pages(page)"
    ]
@@ -157,7 +179,25 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-1-736bf922cedc>:18: DeprecationWarning: use options instead of chrome_options\n",
+      "  driver = webdriver.Chrome(executable_path=driver_type, chrome_options=options)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://www.indeed.com/viewjob?jk=5064b0d04f092d24&fccid=c060d0df634ace82&vjs=3\n",
+      "https://www.indeed.com/viewjob?jk=be416ffb92528e8e&fccid=8bc01be85b97ce0d&vjs=3\n",
+      "https://www.indeed.com/viewjob?jk=736425f950f1449f&fccid=ada833cd00ae27d8&vjs=3\n"
+     ]
+    }
+   ],
    "source": [
     "soups = get_all_soups(pages)"
    ]
@@ -218,16 +258,15 @@
     "        final = 'Remote'\n",
     "    return final , is_remote\n",
     "    \n",
-    "    \n",
+    "\n",
+    "def parse_job_description(soup):\n",
+    "    job_description = f'N/A-  refer to {parse_link(soup)}'\n",
+    "    container = soup.find('div',{'id':'jobDescriptionText'})\n",
+    "    if container:\n",
+    "        job_description = container.text\n",
+    "    return job_description\n",
     "    "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -242,6 +281,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pandas as pd\n",
+    "import os "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame()\n",
     "for soup in soups:\n",
     "    job = job_posting()\n",
     "    job.job_title = parse_job_title(soup)\n",
@@ -249,10 +301,11 @@
     "    job.company = parse_company_name(soup)\n",
     "    job.is_full_time = parse_working_time(soup)\n",
     "    job.job_location, job.is_remote = parse_job_location(soup)\n",
+    "\n",
+    "    job.description = parse_job_description(soup)\n",
     "    \n",
-    "    job.requirements = None\n",
-    "    job.languages_used = None\n",
-    "    "
+    "    \n",
+    "    df = df.append(job.__dict__, ignore_index=True)\n"
    ]
   },
   {
@@ -260,21 +313,19 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df = df[['company', 'job_title', 'is_full_time', 'original_link', 'is_remote', 'job_location','description',\n",
+    "        ]]"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "df.to_csv(os.path.expanduser(f'~/Downloads/{}.csv'))"
+   ]
   },
   {
    "cell_type": "code",
