--- a/trial_1.ipynb
+++ b/trial_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
     "import time\n",
     "import pandas \n",
     "import os\n",
-    "\n",
+    "import re\n",
     "\n",
     "def setup_driver(headless=True, driver_type=CHROME_DRIVER) -> webdriver:\n",
     "    options = ChromeOptions()\n",
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -194,7 +194,42 @@
      "text": [
       "https://www.indeed.com/viewjob?jk=5064b0d04f092d24&fccid=c060d0df634ace82&vjs=3\n",
       "https://www.indeed.com/viewjob?jk=be416ffb92528e8e&fccid=8bc01be85b97ce0d&vjs=3\n",
-      "https://www.indeed.com/viewjob?jk=736425f950f1449f&fccid=ada833cd00ae27d8&vjs=3\n"
+      "https://www.indeed.com/viewjob?jk=736425f950f1449f&fccid=ada833cd00ae27d8&vjs=3\n",
+      "https://www.indeed.com/viewjob?jk=a4a0e9ccf8a052a8&fccid=66cdbe15c1ac4d49&vjs=3\n",
+      "https://www.indeed.com/viewjob?jk=65aa93086ae9f208&fccid=dd616958bd9ddc12&vjs=3\n",
+      "https://www.indeed.com/viewjob?jk=6c9db143ba6833a4&fccid=aaf3b433897ea465&vjs=3\n",
+      "https://www.indeed.com/viewjob?jk=9b6cad7f40080b62&fccid=ba0b4ef452449c10&vjs=3\n",
+      "https://www.indeed.com/viewjob?jk=c86732b141b38515&fccid=c007936ceb766fe5&vjs=3\n",
+      "https://www.indeed.com/viewjob?jk=d4b43e0826a82778&fccid=4b5d257051285786&vjs=3\n",
+      "https://www.indeed.com/viewjob?jk=e93f908c8eaf6bd7&fccid=e70a7b661388bb93&vjs=3\n",
+      "https://www.indeed.com/viewjob?jk=5d418883c083d19d&fccid=9784ae78e9834539&vjs=3\n",
+      "https://www.indeed.com/viewjob?jk=8fc22cb98176d55c&fccid=16a97ed26c75bf2d&vjs=3\n",
+      "https://www.indeed.com/viewjob?jk=98e883979bea8ef0&fccid=3e3eaa6aedf690a3&vjs=3\n",
+      "https://www.indeed.com/viewjob?jk=9882a391effc77b7&fccid=16a97ed26c75bf2d&vjs=3\n",
+      "https://www.indeed.com/viewjob?jk=cb68e40c200d71d6&fccid=314d6d2bfc9df32c&vjs=3\n",
+      "https://www.indeed.com/viewjob?jk=10ea647495b66b08&fccid=f766f8bfbc3effb7&vjs=3\n",
+      "https://www.indeed.com/viewjob?jk=e2ac69e3df8da482&fccid=5b47cb6dc9bd7f35&vjs=3\n",
+      "https://www.indeed.com/viewjob?jk=248caf8169be95ed&fccid=ae5bfc395c530fbc&vjs=3\n",
+      "https://www.indeed.com/viewjob?jk=3c1814fe69710537&fccid=f89deb5a97c7738a&vjs=3\n",
+      "https://www.indeed.com/viewjob?jk=d1ac7c3abb25c257&fccid=734cb5a01ee60f80&vjs=3\n",
+      "https://www.indeed.com/viewjob?jk=6e60cfdfa9ed1dba&fccid=3e3eaa6aedf690a3&vjs=3\n",
+      "https://www.indeed.com/viewjob?jk=0e0740e99356c723&fccid=31bebfb78bc1f0f1&vjs=3\n",
+      "https://www.indeed.com/viewjob?jk=00901cbf8d49d554&fccid=fe2d21eef233e94a&vjs=3\n",
+      "https://www.indeed.com/viewjob?jk=7bcc0e8542a54815&fccid=bee6abba453010ff&vjs=3\n",
+      "https://www.indeed.com/viewjob?jk=b246045b00ff72ce&fccid=5bd99dfa21c8a490&vjs=3\n",
+      "https://www.indeed.com/viewjob?jk=fcb7593ec9da4fcf&fccid=8b9bafd9d608c198&vjs=3\n",
+      "https://www.indeed.com/viewjob?jk=ae3139c2282ce2b2&fccid=aef928e89977f7f0&vjs=3\n",
+      "https://www.indeed.com/viewjob?jk=b1bc74ae6a65affd&fccid=fa0ca3b638673d62&vjs=3\n",
+      "https://www.indeed.com/viewjob?jk=6bf3bcdbba573e4c&fccid=2ac0dbed95f0e3bf&vjs=3\n",
+      "https://www.indeed.com/viewjob?jk=835c0973db3a626b&fccid=6bcbaf35af26e1a6&vjs=3\n",
+      "https://www.indeed.com/viewjob?jk=1914d2bd592ea91d&fccid=cd9b55c1b610a1b1&vjs=3\n",
+      "https://www.indeed.com/viewjob?jk=2ab912f23dd2ffbb&fccid=66403b30a2c0d89c&vjs=3\n",
+      "https://www.indeed.com/viewjob?jk=8de169232ba54b8d&fccid=3e3eaa6aedf690a3&vjs=3\n",
+      "https://www.indeed.com/viewjob?jk=97ac7dc76da3b0c1&fccid=1b50fcfb150b1b48&vjs=3\n",
+      "https://www.indeed.com/viewjob?jk=cb0cec2741779a06&fccid=fc68da685e8aa986&vjs=3\n",
+      "https://www.indeed.com/viewjob?jk=bf0ae9c135f9c38a&fccid=a2faf1301ac6ad4b&vjs=3\n",
+      "https://www.indeed.com/viewjob?jk=76ddcf435e07a36e&fccid=c594c442f5397e7b&vjs=3\n",
+      "we got 37 job postings\n"
      ]
     }
    ],
@@ -204,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,15 +292,47 @@
     "    if final == '':\n",
     "        final = 'Remote'\n",
     "    return final , is_remote\n",
-    "    \n",
-    "\n",
-    "def parse_job_description(soup):\n",
-    "    job_description = f'N/A-  refer to {parse_link(soup)}'\n",
-    "    container = soup.find('div',{'id':'jobDescriptionText'})\n",
-    "    if container:\n",
-    "        job_description = container.text\n",
-    "    return job_description\n",
-    "    "
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import os "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame()\n",
+    "for soup in soups:\n",
+    "    job = job_posting()\n",
+    "    job.job_title = parse_job_title(soup)\n",
+    "    job.original_link = parse_link(soup)\n",
+    "    job.company = parse_company_name(soup)\n",
+    "    job.is_full_time = parse_working_time(soup)\n",
+    "    job.job_location, job.is_remote = parse_job_location(soup)\n",
+    "    df = df.append(job.__dict__, ignore_index=True)\n",
+    "    df = df[['company', 'job_title', 'is_full_time', 'original_link', 'is_remote', 'job_location','description']]\n",
+    "    todays_date = time.strftime(\"%d-%m-%Y\")\n",
+    "    csv_filename = todays_date +\".csv\"\n",
+    "    df.to_csv(os.path.expanduser(f'~/Downloads/{csv_filename}'))"
    ]
   },
   {
@@ -280,33 +347,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "import os "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "df = pd.DataFrame()\n",
-    "for soup in soups:\n",
-    "    job = job_posting()\n",
-    "    job.job_title = parse_job_title(soup)\n",
-    "    job.original_link = parse_link(soup)\n",
-    "    job.company = parse_company_name(soup)\n",
-    "    job.is_full_time = parse_working_time(soup)\n",
-    "    job.job_location, job.is_remote = parse_job_location(soup)\n",
-    "\n",
-    "    job.description = parse_job_description(soup)\n",
-    "    \n",
-    "    \n",
-    "    df = df.append(job.__dict__, ignore_index=True)\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -314,8 +355,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df[['company', 'job_title', 'is_full_time', 'original_link', 'is_remote', 'job_location','description',\n",
-    "        ]]"
+    "csv_filename"
    ]
   },
   {
@@ -323,9 +363,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "df.to_csv(os.path.expanduser(f'~/Downloads/{}.csv'))"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
