--- a/trial_1.ipynb
+++ b/trial_1.ipynb
@@ -13,7 +13,7 @@
     "import datetime \n",
     "CHROME_DRIVER = './chromedriver'\n",
     "import time\n",
-    "import pandas \n",
+    "import pandas as pd\n",
     "import os\n",
     "import re\n",
     "\n",
@@ -37,14 +37,13 @@
     "    #basic function to parse the soup\n",
     "    driver = setup_driver()\n",
     "    driver.get(link)\n",
-    "    time.sleep(8)\n",
+    "    time.sleep(4)\n",
     "    soup = BeautifulSoup(driver.page_source, \"html.parser\")\n",
     "    executing_query = \"document.getElementsByClassName('popover-x-button-close icl-CloseButton')[0].click()\"\n",
     "    #in case a pop up appears, it closes it\n",
     "    if soup.find('div',{'id':'popover-form-container'}):\n",
     "        driver.execute_script(executing_query)\n",
     "        soup = BeautifulSoup(driver.page_source, \"html.parser\")\n",
-    "    print(driver.current_url)\n",
     "    driver.quit()\n",
     "    return soup\n",
     "\n",
@@ -114,7 +113,6 @@
     "        self.is_full_time = None\n",
     "        self.is_remote = None\n",
     "        self.job_location = None\n",
-    "        self.description = None\n",
     "       "
    ]
   },
@@ -132,7 +130,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "pages = parse_all_pages(page)"
@@ -141,9 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "soups = get_all_soups(pages)"
@@ -182,11 +180,12 @@
     "\n",
     "def parse_working_time(soup):\n",
     "    soup_text = soup.text.lower()\n",
-    "    full_time ='N/A'\n",
     "    if 'full time' in soup_text or 'full-time' in soup_text:\n",
-    "        full_time = bool(1)\n",
+    "        full_time = True\n",
     "    elif 'part time' in soup_text or 'part-time' in soup_text:\n",
-    "        full_time = bool(0)\n",
+    "        full_time = False\n",
+    "    else:\n",
+    "        full_time = 'N/A'\n",
     "    return full_time\n",
     "    \n",
     "    \n",
@@ -209,23 +208,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "import os "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -240,25 +222,11 @@
     "    job.is_full_time = parse_working_time(soup)\n",
     "    job.job_location, job.is_remote = parse_job_location(soup)\n",
     "    df = df.append(job.__dict__, ignore_index=True)\n",
-    "df = df[['company', 'job_title', 'is_full_time', 'original_link', 'is_remote', 'job_location','description']]\n",
+    "df = df[['company', 'job_title', 'is_full_time', 'original_link', 'is_remote', 'job_location']]\n",
     "todays_date = f'{datetime.datetime.now():%d-%m-%Y-%H-%M}'\n",
     "csv_filename = str(todays_date) +\".csv\"\n",
     "df.to_csv(os.path.expanduser(f'~/Downloads/{csv_filename}'))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
