added the manual entry feature

--- a/trial_1.ipynb
+++ b/trial_1.ipynb
@@ -119,12 +119,50 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def filter_for_url(text):\n",
+    "    return text.replace(' ','+').replace(',','')\n",
+    "    \n",
+    "\n",
+    "def get_exact_link(job = None, location = None):\n",
+    "    base_link = \"https://www.indeed.com/\"\n",
+    "    if job == None:\n",
+    "        url = 'https://www.indeed.com/jobs?q=software+engineer&l='\n",
+    "        \n",
+    "    else:\n",
+    "        url = base_link + 'jobs?q=' + filter_for_url(job)+'&l=' + filter_for_url(location)\n",
+    "    return url"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "job = \"Software Engineer Intern\"\n",
+    "location = \"Queens, New York\"\n",
+    "url = get_exact_link(job, location)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "page = get_soup('https://www.indeed.com/jobs?q=%22Software+Engineer%22&l=')"
+    "page = get_soup(url)"
    ]
   },
   {
@@ -202,7 +240,7 @@
     "    if final == '':\n",
     "        final = 'Remote'\n",
     "    return final , is_remote\n",
-    "    \n"
+    "    "
    ]
   },
   {
